[package]
name = "egui-cfg"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["egui", "cfg", "visualization", "graph"]
description = "egui library for displaying control flow graphs using petgraph."
repository = "https://github.com/teabound/egui-cfg"
homepage = "https://github.com/teabound/egui-cfg"
documentation = "https://docs.rs/egui-cfg"
readme = "README.md"

[dependencies]
egui = "0.33.3"
petgraph = "0.8.3"
rust-sugiyama = "0.4.0"

[dev-dependencies]
eframe = "0.33.3"
